--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
             <div class="header-text">
                 <h1>Hello, I'm <span>Preeti Yadav</span></h1>
-                <p>Web Developer | Python Programmer</p>
+                <p>Web Developer</p>
             </div>
         </div>
     </div>
